crates/fsqlite-harness/tests/ui/sealed_mvcc_pager_impl_fail.stderr
error[E0277]: the trait bound `ExternalPager: traits::sealed::Sealed` is not satisfied
  --> tests/ui/sealed_mvcc_pager_impl_fail.rs:10:5
   |
10 |     fn begin(&self, _cx: &Cx, _mode: TransactionMode) -> Result<Self::Txn> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `traits::sealed::Sealed` is not implemented for `ExternalPager`
  --> tests/ui/sealed_mvcc_pager_impl_fail.rs:5:1
   |
 5 | struct ExternalPager;
   | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `traits::sealed::Sealed`
  --> $WORKSPACE/crates/fsqlite-pager/src/traits.rs
   |
   | impl sealed::Sealed for MockMvccPager {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockMvccPager`
...
   | impl sealed::Sealed for MockTransaction {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockTransaction`
...
   | impl sealed::Sealed for MockCheckpointPageWriter {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockCheckpointPageWriter`
note: required by a bound in `MvccPager`
  --> $WORKSPACE/crates/fsqlite-pager/src/traits.rs
   |
   | pub trait MvccPager: sealed::Sealed + Send + Sync {
   |                      ^^^^^^^^^^^^^^ required by this bound in `MvccPager`
   = note: `MvccPager` is a "sealed trait", because to implement it you also need to implement `fsqlite_pager::traits::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             fsqlite_pager::MockMvccPager
             fsqlite_pager::MockTransaction
             fsqlite_pager::MockCheckpointPageWriter

error[E0277]: the trait bound `ExternalPager: traits::sealed::Sealed` is not satisfied
 --> tests/ui/sealed_mvcc_pager_impl_fail.rs:7:20
  |
7 | impl MvccPager for ExternalPager {
  |                    ^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `traits::sealed::Sealed` is not implemented for `ExternalPager`
 --> tests/ui/sealed_mvcc_pager_impl_fail.rs:5:1
  |
5 | struct ExternalPager;
  | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `traits::sealed::Sealed`
 --> $WORKSPACE/crates/fsqlite-pager/src/traits.rs
  |
  | impl sealed::Sealed for MockMvccPager {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockMvccPager`
...
  | impl sealed::Sealed for MockTransaction {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockTransaction`
...
  | impl sealed::Sealed for MockCheckpointPageWriter {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MockCheckpointPageWriter`
note: required by a bound in `MvccPager`
 --> $WORKSPACE/crates/fsqlite-pager/src/traits.rs
  |
  | pub trait MvccPager: sealed::Sealed + Send + Sync {
  |                      ^^^^^^^^^^^^^^ required by this bound in `MvccPager`
  = note: `MvccPager` is a "sealed trait", because to implement it you also need to implement `fsqlite_pager::traits::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            fsqlite_pager::MockMvccPager
            fsqlite_pager::MockTransaction
            fsqlite_pager::MockCheckpointPageWriter
